--- a/package.json
+++ b/package.json
@@ -35,13 +35,15 @@
     "check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
-    "test": "vitest run"
+    "test": "vitest run --pass-with-no-tests"
   },
   "dependencies": {
     "@nestjs/common": "^11.1.3",
     "@nestjs/core": "^11.1.3",
+    "@nestjs/graphql": "^13.1.0",
     "better-auth": "^1.2.12",
-    "fastify": "^5.4.0"
+    "fastify": "^5.4.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.16.2",
