--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "lint:fix": "eslint --fix",
     "test": "vitest run --pass-with-no-tests"
   },
+  "peerDependencies": {
+    "better-auth": "^1.2.12"
+  },
   "dependencies": {
     "@nestjs/common": "^11.1.3",
     "@nestjs/core": "^11.1.3",
     "@nestjs/graphql": "^13.1.0",
-    "better-auth": "^1.2.12",
-    "fastify": "^5.4.0",
+    "fastify": "^5",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
