--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@changesets/cli": "^2.29.5",
     "@types/node": "^24.0.10",
     "@vitest/coverage-v8": "^3.2.4",
+    "better-auth": "^1.3.28",
     "eslint": "^9.30.1",
     "typescript": "^5",
     "unplugin-swc": "^1.5.5",
