--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "prepublishOnly": "pnpm ci:publish",
+    "clean": "rimraf dist",
     "build": "tsc",
     "dev": "vitest",
-    "ci:publish": "pnpm build && pnpm lint && pnpm check-exports && pnpm test",
+    "ci:publish": "pnpm clean && pnpm build && pnpm lint && pnpm check-exports && pnpm test",
     "local-release": "changeset version && changeset publish",
     "check-exports": "attw --pack . --ignore-rules=cjs-resolves-to-esm",
     "lint": "eslint",
@@ -55,6 +56,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "better-auth": "^1.3.28",
     "eslint": "^9.30.1",
+    "rimraf": "^6.0.1",
     "typescript": "^5",
     "unplugin-swc": "^1.5.5",
     "vitest": "^3.2.4"
