--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@kylegillen/nestjs-fastify-better-auth",
   "type": "module",
   "version": "1.1.4",
-  "packageManager": "pnpm@10.10.0",
+  "packageManager": "pnpm@10.18.3",
   "description": "Better Auth for NestJS and Fastify",
   "author": "Kyle Gillen",
   "license": "MIT",
@@ -39,14 +39,15 @@
     "test": "vitest run --pass-with-no-tests"
   },
   "peerDependencies": {
-    "better-auth": "^1.3.28"
-  },
-  "dependencies": {
     "@nestjs/common": "^11.1.6",
     "@nestjs/core": "^11.1.6",
-    "@nestjs/graphql": "^13.2.0",
-    "fastify": "^5.6.1",
-    "socket.io": "^4.8.1"
+    "@nestjs/graphql": "^13.1.0",
+    "@nestjs/platform-fastify": "^11.1.6",
+    "better-auth": ">=1.3.8 <2.0.0",
+    "fastify": "^5.4.0",
+    "graphql": "^16.11.0",
+    "socket.io": "^4.8.1",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.19.0",
