--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@nestjs/core": "^11.1.6",
     "@nestjs/graphql": "^13.1.0",
     "@nestjs/platform-fastify": "^11.1.6",
-    "better-auth": ">=1.3.8 <2.0.0",
+    "better-auth": "~1.4.0",
     "fastify": "~5.6.0",
     "graphql": "^16.11.0",
     "socket.io": "^4.8.1",
@@ -55,7 +55,7 @@
     "@changesets/cli": "^2.29.7",
     "@types/node": "^24.8.1",
     "@vitest/coverage-v8": "^3.2.4",
-    "better-auth": "^1.3.28",
+    "better-auth": "^1.4.1",
     "eslint": "^9.38.0",
     "rimraf": "^6.0.1",
     "typescript": "^5.9.3",
